Limit platforms to linux/amd64

--- a/.github/workflows/image-26.2.yml
+++ b/.github/workflows/image-26.2.yml
@@ -20,7 +20,8 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           file: dockerfiles/26.2/Dockerfile
-          # ppa*.rabbitmq.com only provide amd64 packages at the moment
+          # ppa*.rabbitmq.com only provide amd64 packages at the moment.
+          # Launchpad does produce arm64 packages but cannot be used on Debian :/
           platforms: linux/amd64
           push: true
           tags: rabbitmqdevenv/build-env-26.2:latest
