Add bash-completion for development use

--- a/dockerfiles/26.2/Dockerfile
+++ b/dockerfiles/26.2/Dockerfile
@@ -164,5 +164,6 @@ rm -rf bats-core
 # --------------------------------------------------------------------
 
 RUN apt-get install -y -V --fix-missing --no-install-recommends \
+      bash-completion \
       elinks \
       vim
