Run autoclean at the end

--- a/dockerfiles/26.2/Dockerfile
+++ b/dockerfiles/26.2/Dockerfile
@@ -178,3 +178,5 @@ RUN apt-get install -y -V --fix-missing --no-install-recommends \
       bash-completion \
       elinks \
       vim
+
+RUN apt-get autoclean -y
