New workflow: build OCI for rabbitmq/delete-release-action

--- a/.github/workflows/image-26.2.yml
+++ b/.github/workflows/image-26.2.yml
@@ -2,7 +2,7 @@ name: Rebuild Erlang 26.2 image
 
 on:
   push:
-    paths: ['dockerfiles/**', '.github/workflows/**']
+    paths: ['dockerfiles/26.2/Dockerfile', '.github/workflows/image-26.2.yml']
 
 jobs:
   docker:
