rabbitmq/delete-release-action OCI WIP

--- a/.github/workflows/image-delete-release-action.yml
+++ b/.github/workflows/image-delete-release-action.yml
@@ -14,6 +14,8 @@ jobs:
           repository: rabbitmq/delete-release-action
           ref: main
           path: delete-release-action
+      - name: "ls delete-release-action"
+        run: "ls -lha ./delete-release-action"
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
@@ -26,7 +28,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          file: delete-release-action/Dockerfile
+          file: ./delete-release-action/Dockerfile
           # ppa*.rabbitmq.com only provide amd64 packages at the moment.
           # Launchpad does produce arm64 packages but cannot be used on Debian :/
           platforms: linux/amd64
