Install p7zip post rabbitmq/rabbitmq-server#12922

--- a/dockerfiles/26.2/Dockerfile
+++ b/dockerfiles/26.2/Dockerfile
@@ -83,6 +83,7 @@ RUN apt-get clean && \
       man \
       mandoc \
       osslsigncode \
+      p7zip \
       rsync \
       xmlto \
       xsltproc \
