--- a/dockerfiles/27.3/Dockerfile
+++ b/dockerfiles/27.3/Dockerfile
@@ -83,6 +83,7 @@ RUN apt-get clean && \
       man \
       mandoc \
       osslsigncode \
+      p7zip \
       rsync \
       xmlto \
       xsltproc \
