Use 7zip package and alias binary to 7z
The 7zip package provides a version from 2022 where p7zip provides a
2016. None provides a 7z binary, so an alias is necessary.

--- a/dockerfiles/26.2/Dockerfile
+++ b/dockerfiles/26.2/Dockerfile
@@ -83,12 +83,13 @@ RUN apt-get clean && \
     man \
     mandoc \
     osslsigncode \
-    p7zip \
+    7zip \
     rsync \
     xmlto \
     xsltproc \
     zip \
-    unzip
+    unzip && \
+    alias 7z=7zz
 
 RUN apt-get install -y -V --fix-missing --no-install-recommends \
     -t bookworm-backports \
