--- a/dockerfiles/26.2/Dockerfile
+++ b/dockerfiles/26.2/Dockerfile
@@ -27,7 +27,7 @@ RUN apt-get clean && \
     apt-get install -y -V --no-install-recommends \
     apt-transport-https \
     ca-certificates \
-    wget \
+    curl \
     debconf-utils \
     gnupg
 
