Add cmake to rocky-based images

--- a/dockerfiles/26.2-rocky8/Dockerfile
+++ b/dockerfiles/26.2-rocky8/Dockerfile
@@ -45,7 +45,8 @@ RUN dnf install -y \
     openssl-devel \
     perl \
     tar \
-    libxslt
+    libxslt \
+    cmake
 
 # Build Erlang from source using kerl
 # https://github.com/kerl/kerl
